{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Eye",
            "id": "2607b44d-6809-43c9-9faf-4c58dec8819b",
            "actions": [
                {
                    "name": "FaceButton_Down",
                    "type": "Button",
                    "id": "492a70d7-d509-4077-9b92-521c09c3ced8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FaceButton_Up",
                    "type": "Button",
                    "id": "4d094d4b-561f-46fc-98f1-bbb593f8f554",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FaceButton_Left",
                    "type": "Button",
                    "id": "6d342fe3-65d9-4c2b-92de-905a57cf613a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FaceButton_Right",
                    "type": "Button",
                    "id": "ab9255c7-60c8-4b01-b383-b96a40a289e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Trigger_Left",
                    "type": "Value",
                    "id": "ba76a4a7-1887-4bd8-a686-715fe767a491",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Trigger_Right",
                    "type": "Value",
                    "id": "ee61fb02-ee62-4494-916f-9543d9d53b30",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoulder_Left",
                    "type": "Value",
                    "id": "fa3c4ea9-661c-42d2-98e6-4abc1dd46137",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoulder_Right",
                    "type": "Value",
                    "id": "3198a317-7a22-4dba-b19f-e3a05f0f551c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dpad_Right",
                    "type": "Button",
                    "id": "7894cf37-d3eb-492d-8721-555458044f42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_Left",
                    "type": "Button",
                    "id": "ea991d08-9385-42fc-bb0a-53d863f138ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_Up",
                    "type": "Button",
                    "id": "3309d7c9-5de4-49a5-a62e-cc73a63c6b3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_Down",
                    "type": "Button",
                    "id": "c69deb6b-aa74-4996-8158-c03949f9798f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftStick_X",
                    "type": "Value",
                    "id": "ef20258c-6188-4db5-a83b-870643eecddf",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftStick_Y",
                    "type": "Value",
                    "id": "b3e8b609-72e4-46b6-a105-48a776663c13",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightStick_X",
                    "type": "Value",
                    "id": "54385103-cb40-43f7-a22b-984278b7be55",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightStick_Y",
                    "type": "Value",
                    "id": "74176a68-7f24-42c0-94b0-631a38f8707f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f096f5b-66b1-40b7-9602-d57986fba597",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FaceButton_Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d834edb-b926-49c5-87fe-ff82c42cba51",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FaceButton_Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b060b931-f1c0-4fb7-9c82-9846720b9365",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FaceButton_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89e4adad-13dd-404d-bdc2-02e58ee14ccb",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FaceButton_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95d25fe8-9c43-4f0c-9df0-c4a448094b7f",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91ad0187-aa74-4f42-a2a4-5de330faa617",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94f2f2b3-91ad-438a-8488-0dcb8a781a9f",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoulder_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc9bf56b-7c33-43e6-95ac-02d0fba41e7f",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoulder_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d05fd620-ca17-4eca-8404-268890142f3c",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad_Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aec73b64-0956-4de9-8b76-987949b451af",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad_Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6600b22-a82c-4376-aec7-14f1b9e23457",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "436f27b1-2e58-4cef-98ed-a358706b74a0",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dpad_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf32a625-2a4a-40ac-b56e-6d0c67b59706",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick_X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d3038c1-92f7-427d-ada2-b6b45861c262",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick_Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78653a10-e4d2-4000-93ef-789d26d97789",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick_Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e466cf47-1598-4c75-a2cf-e4fab18d902a",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick_X",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}